did a lot of stuff today. Discovered some issues with the way that the text in the code blocks doesn't wrap properly causing all the text, including the code block background to overflow the article container. fixed that by reducing the line length in the code blocks for now, couldn't find an easy solution. Also moved the code block sstyle sheet that I edited to the root of the repo for now and connected it to gatsby-browser.js. Then I finished editing the fontawesome blog post and added a bit about accessibility. Added an excerpt to index page list of blog posts and corrected the spacing between elements. Along with the conversation in the blog post, I added accessibility to the icons on the contact page. and added some images for the new blog post.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -273,7 +273,7 @@ h1 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin-bottom: 1rem;
   color: inherit;
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
@@ -730,10 +730,6 @@ figcaption {
   font-weight: normal;
   font-size: 1.5rem;
   width: 79%;
-}
-
-:not(pre) > code[class*='language-'] {
-  white-space: pre;
 }
 
 @media only screen and (max-width: 600px) {
