--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,4 +1,4 @@
-a {
+aside a {
   text-decoration: none;
   color: #f5f5f5;
 }
