--- a/src/page_styles/index.css
+++ b/src/page_styles/index.css
@@ -1,11 +1,16 @@
 h1 {
   font-size: 4vw;
+  margin-top: 1.5rem;
 }
 
 .icons {
   padding: 0 1.5rem 0 0;
   font-size: 3rem;
   color: #005400;
+}
+
+.continue {
+  margin: 0.5rem 0 3rem 0;
 }
 
 @media only screen and (min-width: 900px) {
